--- a/apiRestNode/.env
+++ b/apiRestNode/.env
@@ -6,7 +6,7 @@ PORT = 3000
 
 DB_HOST = 'localhost'
 DB_PORT = 3306
-DB_NAME = 'agrosoftNode'
+DB_NAME = 'agrosoftnode'
 DB_USER = 'root'
 DB_PASS = ''
 
