--- a/AgroSoft_f/package.json
+++ b/AgroSoft_f/package.json
@@ -20,6 +20,7 @@
     "@heroui/use-theme": "2.1.5",
     "@iconify/react": "^5.2.0",
     "@react-aria/visually-hidden": "3.8.19",
+    "@react-pdf/renderer": "^4.3.0",
     "@react-types/shared": "3.27.0",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.69.0",
