--- a/apiRestNode/package.json
+++ b/apiRestNode/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^3.1.9",
     "recharts": "^2.15.2",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "ws": "^8.18.1"
   }
 }
