--- a/AgroSoft_f/package.json
+++ b/AgroSoft_f/package.json
@@ -31,6 +31,8 @@
     "clsx": "2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "11.15.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.477.0",
     "react": "18.3.1",
     "react-apexcharts": "^1.7.0",
