--- a/AgroSoft_f/package.json
+++ b/AgroSoft_f/package.json
@@ -15,7 +15,7 @@
     "@heroui/card": "^2.2.15",
     "@heroui/react": "^2.7.5",
     "@heroui/system": "2.4.10",
-    "@heroui/theme": "2.4.9",
+    "@heroui/theme": "^2.4.16",
     "@heroui/toast": "^2.0.6",
     "@heroui/use-theme": "2.1.5",
     "@iconify/react": "^5.2.0",
@@ -33,12 +33,14 @@
     "framer-motion": "11.15.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.477.0",
     "react": "18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.30.0",
     "recharts": "^2.15.1",
     "tailwind-variants": "0.3.0",
