--- a/AgroSoft_f/package.json
+++ b/AgroSoft_f/package.json
@@ -33,6 +33,7 @@
     "framer-motion": "11.15.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.477.0",
     "react": "18.3.1",
