modelos bd y controlador de usuarios con prisma

--- a/apiRestNode/.env
+++ b/apiRestNode/.env
@@ -25,4 +25,4 @@ SECRET_KEY = 'pepelin'
 # server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the 
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
-DATABASE_URL="postgresql://agrosoftNode:adso2024@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://postgres:adso2024@localhost:5432/agrosoftNode?schema=public"
