--- a/apiRestNode/package.json
+++ b/apiRestNode/package.json
@@ -11,6 +11,7 @@
   "author": "Luis Alejandro Bonilla Echeverri (líder)",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.9.0",
     "@react-pdf/renderer": "^4.3.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
